<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_a_propos"
            android:icon="@drawable/ic_menu_a_propos"
            android:title="@string/menu_1" />
        <item
            android:id="@+id/nav_json"
            android:icon="@drawable/ic_menu_json"
            android:title="@string/menu_2" />
        <item
            android:id="@+id/nav_textview"
            android:icon="@drawable/ic_menu_toast"
            android:title="@string/menu_3" />
        <item
            android:id="@+id/nav_calendrier"
            android:icon="@drawable/ic_menu_calendrier"
            android:title="@string/menu_4" />
        <item
            android:id="@+id/nav_youtube"
            android:icon="@drawable/ic_menu_youtube"
            android:title="@string/menu_5" />
    </group>

</menu>
