<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_main2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:verticalScrollbarPosition="defaultPosition"
        tools:context="org.esiea.fagot_perrault.inf3044_fagot_perrault.Main2Activity">

        <TextView
            android:id="@+id/text_a_propos_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#000000"
            android:text="@string/a_propos_1" />

        <TextView
            android:id="@+id/text_a_propos_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_below="@id/text_a_propos_1"
            android:paddingTop="20dp"
            android:text="@string/a_propos_2" />

        <TextView
            android:id="@+id/text_a_propos_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_below="@id/text_a_propos_2"
            android:paddingLeft="35dp"
            android:text="@string/a_propos_3" />

        <TextView
            android:id="@+id/text_a_propos_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_below="@id/text_a_propos_3"
            android:paddingLeft="35dp"
            android:text="@string/a_propos_4" />

        <TextView
            android:id="@+id/text_a_propos_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_below="@id/text_a_propos_4"
            android:paddingLeft="35dp"
            android:text="@string/a_propos_5" />

        <TextView
            android:id="@+id/text_a_propos_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_below="@id/text_a_propos_5"
            android:paddingLeft="35dp"
            android:text="@string/a_propos_6" />

        <TextView
            android:id="@+id/text_a_propos_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_below="@id/text_a_propos_6"
            android:paddingLeft="35dp"
            android:text="@string/a_propos_7" />

        <TextView
            android:id="@+id/text_a_propos_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_below="@id/text_a_propos_7"
            android:paddingLeft="35dp"
            android:text="@string/a_propos_8" />

        <TextView
            android:id="@+id/text_a_propos_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_below="@id/text_a_propos_8"
            android:paddingLeft="35dp"
            android:text="@string/a_propos_9" />

        <TextView
            android:id="@+id/text_a_propos_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_below="@id/text_a_propos_9"
            android:paddingLeft="35dp"
            android:text="@string/a_propos_10" />

        <TextView
            android:id="@+id/text_a_propos_11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_below="@id/text_a_propos_10"
            android:paddingLeft="35dp"
            android:text="@string/a_propos_11" />

        <TextView
            android:id="@+id/text_a_propos_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_below="@id/text_a_propos_11"
            android:paddingTop="20dp"
            android:text="@string/a_propos_12" />

        <TextView
            android:id="@+id/text_a_propos_13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_below="@id/text_a_propos_12"
            android:text="@string/a_propos_13" />

        <ImageView
            android:id="@+id/image_a_propos_esiea"
            app:srcCompat="@drawable/esiea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_a_propos_13"
            android:paddingTop="20dp"/>

    </RelativeLayout>

</ScrollView>
