<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.esiea.fagot_perrault.inf3044_fagot_perrault.Main5Activity">

    <TextView
        android:id="@+id/text_calendar_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main5_1"
        android:textSize="20dp"
        android:textColor="#000000"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_calendar_1"
        android:gravity="center"
        android:id="@+id/choose"
        android:onClick="choose"
        android:text="@string/main5_2"
        android:layout_marginTop="5dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choose"
        android:gravity="center"
        android:id="@+id/choose2"
        android:onClick="choose2"
        android:text="@string/main5_3"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/text_calendar_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main5_4"
        android:textSize="20dp"
        android:textColor="#000000"
        android:layout_below="@id/choose2"
        android:layout_marginTop="5dp"
        />

    <EditText
        android:id="@+id/calendar_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_calendar_2"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:lines="7"
        android:minLines="7"
        android:maxLines="7"
        android:gravity="top|left" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calendar_edittext"
        android:gravity="center"
        android:id="@+id/validate"
        android:onClick="validate"
        android:text="@string/main5_5"
        android:layout_marginTop="5dp"/>
</RelativeLayout>
